--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -4,9 +4,6 @@
 
     <data>
 
-        <variable
-            name="viewModel"
-            type="com.example.summarizednews.news.presentation.screen.detail.NewsDetailViewModel" />
 
         <import type="android.view.View" />
 
@@ -25,17 +22,17 @@
 
 
             <LinearLayout
+                android:id="@+id/news_detail_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="16dp"
-                android:visibility="@{viewModel.state.isLoading ? View.GONE : View.VISIBLE}">
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/news_detail_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{viewModel.state.data.title}"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -47,7 +44,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="@{viewModel.state.data.section}"
                     android:textColor="@color/black"
                     android:textSize="@dimen/default_text_size"
                     tools:text="Media" />
@@ -58,19 +54,19 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:gravity="end"
-                    android:text="@{viewModel.state.data.writtenAt}"
                     android:textColor="@color/gray"
                     android:textSize="@dimen/default_text_size"
                     tools:text="2023-02-10T16:37:18Z" />
 
                 <androidx.appcompat.widget.LinearLayoutCompat
+                    android:id="@+id/news_summary_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_margin"
                     android:background="@color/purple_500"
                     android:orientation="vertical"
                     android:padding="10dp"
-                    android:visibility="@{viewModel.state.summary != null ? View.VISIBLE : View.GONE}">
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -81,9 +77,9 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/news_summary_content"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@{viewModel.state.summary}"
                         android:textColor="@color/white"
                         tools:text="Summary content" />
 
@@ -94,7 +90,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:text="@{Html.fromHtml(viewModel.state.data.body ?? ``)}"
                     android:textColor="@color/black"
                     android:textSize="@dimen/default_text_size"
                     tools:text="News body text" />
@@ -105,12 +100,13 @@
         </ScrollView>
 
         <ProgressBar
+            android:id="@+id/news_detail_progress_bar"
             style="@style/Widget.Material3.CircularProgressIndicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:indeterminate="true"
-            android:visibility="@{viewModel.state.isLoading ? View.VISIBLE : View.GONE}" />
+            android:visibility="visible" />
 
     </FrameLayout>
 
