--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -1,66 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/news_list_refresh_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <data>
-        <variable
-            name="loadState"
-            type="androidx.paging.LoadState" />
-    </data>
-
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        showLoading="@{loadState}"
-        android:id="@+id/news_list_refresh_layout"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/news_list_loading_shimmer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            tools:visibility="gone">
 
-            <com.facebook.shimmer.ShimmerFrameLayout
-                showShimmerWhenLoading="@{loadState}"
-                android:id="@+id/news_list_loading_shimmer"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:visibility="gone">
+                android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+                <include layout="@layout/news_item_placeholder" />
 
-                    <include layout="@layout/news_item_placeholder" />
+                <include layout="@layout/news_item_placeholder" />
 
-                    <include layout="@layout/news_item_placeholder" />
+                <include layout="@layout/news_item_placeholder" />
 
-                    <include layout="@layout/news_item_placeholder" />
+                <include layout="@layout/news_item_placeholder" />
 
-                    <include layout="@layout/news_item_placeholder" />
+                <include layout="@layout/news_item_placeholder" />
 
-                    <include layout="@layout/news_item_placeholder" />
+                <include layout="@layout/news_item_placeholder" />
 
-                    <include layout="@layout/news_item_placeholder" />
+                <include layout="@layout/news_item_placeholder" />
 
-                    <include layout="@layout/news_item_placeholder" />
+            </LinearLayout>
 
-                </LinearLayout>
+        </com.facebook.shimmer.ShimmerFrameLayout>
 
-            </com.facebook.shimmer.ShimmerFrameLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/news_list_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/view_holder_news_item"
+            tools:visibility="visible" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                showWhenNotLoading="@{loadState}"
-                android:id="@+id/news_list_recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/view_holder_news_item"
-                tools:visibility="visible" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-</layout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
