--- a/app/src/main/res/layout/view_holder_news_item.xml
+++ b/app/src/main/res/layout/view_holder_news_item.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="uiState"
-            type="com.example.summarizednews.news.presentation.screen.list.NewsUiState" />
+            type="com.example.summarizednews.news.presentation.list.NewsUiState" />
 
         <import type="kotlin.jvm.functions.Function0" />
     </data>
