--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/newsListFragment"
-        android:name="com.example.summarizednews.news.presentation.screen.list.NewsListFragment"
+        android:name="com.example.summarizednews.news.presentation.list.NewsListFragment"
         android:label="NewsListFragment" >
         <action
             android:id="@+id/action_newsListFragment_to_newsDetailFragment"
@@ -14,7 +14,7 @@
     </fragment>
     <fragment
         android:id="@+id/newsDetailFragment"
-        android:name="com.example.summarizednews.news.presentation.screen.detail.NewsDetailFragment"
+        android:name="com.example.summarizednews.news.presentation.detail.NewsDetailFragment"
         android:label="NewsDetailFragment" >
         <argument
             android:name="news_id"
