--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -5,8 +5,8 @@
     <data>
 
         <variable
-            name="viewModel"
-            type="com.example.summarizednews.news.presentation.detail.NewsDetailViewModel" />
+            name="state"
+            type="com.example.summarizednews.news.presentation.detail.NewsDetailState" />
 
         <import type="android.view.View" />
 
@@ -29,13 +29,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="16dp"
-                android:visibility="@{viewModel.newsDetail == null ? View.GONE : View.VISIBLE}">
+                android:visibility="@{state.isLoading ? View.GONE : View.VISIBLE}">
 
                 <TextView
                     android:id="@+id/news_detail_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{viewModel.newsDetail.title}"
+                    android:text="@{state.newsDetail.title}"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -47,7 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="@{viewModel.newsDetail.section}"
+                    android:text="@{state.newsDetail.section}"
                     android:textColor="@color/black"
                     android:textSize="@dimen/default_text_size"
                     tools:text="Media" />
@@ -58,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:gravity="end"
-                    android:text="@{viewModel.newsDetail.writtenAt}"
+                    android:text="@{state.newsDetail.writtenAt}"
                     android:textColor="@color/gray"
                     android:textSize="@dimen/default_text_size"
                     tools:text="2023-02-10T16:37:18Z" />
@@ -70,7 +70,7 @@
                     android:background="@color/purple_500"
                     android:orientation="vertical"
                     android:padding="10dp"
-                    android:visibility="@{viewModel.newsSummary != null ? View.VISIBLE : View.GONE}">
+                    android:visibility="@{state.summary != null ? View.VISIBLE : View.GONE}">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -83,7 +83,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@{viewModel.newsSummary}"
+                        android:text="@{state.summary}"
                         android:textColor="@color/white"
                         tools:text="Summary content" />
 
@@ -94,7 +94,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:text="@{Html.fromHtml(viewModel.newsDetail.body ?? ``)}"
+                    android:text="@{Html.fromHtml(state.newsDetail.body ?? ``)}"
                     android:textColor="@color/black"
                     android:textSize="@dimen/default_text_size"
                     tools:text="News body text" />
@@ -110,7 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:indeterminate="true"
-            android:visibility="@{viewModel.newsDetail == null ? View.VISIBLE : View.GONE}" />
+            android:visibility="@{state.isLoading ? View.VISIBLE : View.GONE}" />
 
     </FrameLayout>
 
